[BACKLOG-11648] fixed double scrollbar issue in sapphire theme

--- a/user-console/source/org/pentaho/mantle/public/themes/sapphire/mantleSapphire.css
+++ b/user-console/source/org/pentaho/mantle/public/themes/sapphire/mantleSapphire.css
@@ -1441,6 +1441,7 @@ a:active, a:hover {
 }
 
 .users-roles-selection-list {
+  overflow: hidden;
   height: 317px;
 }
 
